<resources>
    <string name="app_name">LamavieDelivery</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="facebook">Facebook</string>
    <string name="apple_id">Apple ID</string>
    <string name="google">Google</string>
    <string name="text_for_term_condition"><![CDATA[By continuing, you agree to Terms & Conditions]]></string>
    <string name="next">Next</string>
    <string name="otp_text">Enter your mobile number we will send you the OTP to verify later</string>
    <string name="submit">Submit</string>
    <string name="otp_verify_one">We have sent you an SMS on</string>

    <string name="otp_verify_two">with 6 digit verification code.</string>
    <string name="do_not_receive_code">Did not receive the code?</string>
    <string name="resend">Re-send</string>
    <string name="get_call">Get a call now</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
    <string name="account_information">Account Information</string>
    <string name="upload_your_profile_picture">Upload your profile picture</string>
    <string name="add_your_picture">Add your picture</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign up</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="text_for_gender">This will help you in adjusting reps, wieghts and plan for you</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="account">Account</string>

    <string name="recharge">recharge</string>
    <string name="available_balance">Available Balance</string>
    <string name="withdraw">withdraw</string>
    <string name="transacations">Transacations</string>

    <string name="account_info">Account Info</string>
    <string name="change_password">Change Password</string>
    <string name="my_address">My Address</string>
    <string name="logout">Logout</string>
    <string name="msg">Messages</string>
    <string name="notification">Notifications</string>
    <string name="order_history">Order History</string>
    <string name="others">Others</string>
    <string name="main">Main</string>

    <string name="please_wait">Please wait...</string>
    <string name="network_failure">Sorry! Not connected to internet</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_mobile_number">Please enter mobile number</string>

    <string name="wrong_email">Can\'t enter worng email.</string>
    <string name="enter_dob">Enter dob</string>

    <string name="place_api_key">AIzaSyC4Eg_qGdkZrcW-td6QsmJAk2g4nzPaat0</string>
    <string name="address">Address</string>
    <string name="please_select_address">Please select address</string>
    <string name="camera">Camera</string>
    <string name="select_image_from">Select image from</string>
    <string name="gallery">Gallery</string>
    <string name="please_select_profile_picture">Please upload profile picture</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="are_you_sure_you_want_to_exit_this_app">Are you sure you want to exit this app?</string>
    <string name="are_you_sure_you_want_to_logout_this_app">Are you sure you want to logout this app?</string>
    <string name="no_booking_available">No booking available</string>
    <string name="save">Save</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="new_pass">New Password</string>

    <string name="required">Required</string>
    <string name="password_does_not_matched">Password doesn\'t matched</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="order_details">Order Details</string>
    <string name="items">Items</string>

    <string name="sub_total">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="decline">decline</string>
    <string name="accept">Accept</string>
    <string name="view_details">View Details</string>
    <string name="track">Track</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="track_order">Track Order</string>

    <!-- key for map-->
    <string name="google_maps_key">AIzaSyAXTJrvnDTC8AjYzK2dPatsSAMJaTIc-c0</string>
    <string name="pickup">Pickup Order</string>
    <string name="confirmed">Confirmed</string>
    <string name="pickup_location">Pickup Location :  </string>
    <string name="delivery_location">Delivery Location :  </string>
    <string name="extra_items">Extra items : </string>
    <string name="payment_type">Payment type :</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="otp">Enter Otp</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="deliver_order">Deliver Order</string>
    <string name="no_order_found">No order found</string>
    <string name="in_progress">In Progress</string>
    <string name="shipped">Shipped</string>
    <string name="order_status">Order Status</string>
    <string name="document">Documents</string>
    <string name="upload_document">"Upload License "</string>
    <string name="national_id">National ID</string>
    <string name="license_number">License Number</string>
    <string name="expiry">Expiration Date</string>
    <string name="update">Update</string>
    <string name="update_document">Update Document</string>


    <string name="otp_send">Otp send successfully.</string>
    <string name="invalid_otp">Invalid Otp.</string>
    <string name="change_language">Change language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="all">All</string>
    <string name="cancel">Cancel</string>
    <string name="completed">Completed</string>
    <string name="paid">PAID</string>
    <string name="timer">02:00 PM</string>

</resources>