<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:orientation="vertical"
            android:background="@drawable/rounder_blue_full_bg">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/active_home"
                android:padding="@dimen/_2sdp"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/_10sdp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/wallet"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/poppins_regular"/>


            <TextView
                android:id="@+id/tvRecharge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge"
                android:textAllCaps="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginRight="@dimen/_10sdp"/>


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layoutBal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_below="@+id/header"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/rounded_fully_blue_bg">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/available_balance"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:layout_margin="@dimen/_10sdp"/>


            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/tv1"
                android:text="L.E20"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp"
                android:fontFamily="@font/poppins_bold"
                />


            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:text="@string/withdraw"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:layout_margin="@dimen/_7sdp"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutBal"
            android:text="@string/transacations"
            android:textAllCaps="false"
            android:textColor="@color/color_black_one"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginLeft="@dimen/_20sdp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv3"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_transaction" />


    </RelativeLayout>
</layout>
