<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/tvMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_30sdp"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_16sdp"
                android:text="@string/account_information" />


            <LinearLayout
                android:layout_below="@+id/tvMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:orientation="vertical"
                >


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etFName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField2"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:layout_marginTop="@dimen/_15sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField3"
                    style="@style/TextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginTop="@dimen/_15sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField4"
                    android:layout_width="match_parent"
                    style="@style/TextLabel"
                    android:layout_height="wrap_content"
                    android:hint="@string/dob"
                    android:layout_marginTop="@dimen/_15sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="@dimen/_12sdp"
                        android:textColor="@color/black"/>

                </com.google.android.material.textfield.TextInputLayout>







                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight=".3"
                        android:gravity="center"
                        app:ccp_countryPreference="SA"
                        app:ccp_showFlag="false"
                        app:ccp_contentColor="@color/black"
                        app:ccp_textSize="@dimen/_12sdp"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextField5"
                        android:layout_width="0dp"
                        style="@style/TextLabel1"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:hint="@string/mobile_number"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMobile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="text"
                            android:imeOptions="actionDone"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="@dimen/_12sdp"
                            android:textColor="@color/black"/>

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/address"
                    android:textSize="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/_12sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/black"
                    android:background="@drawable/rounded_grey_bg"/>


                <androidx.cardview.widget.CardView
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_30sdp"
                    app:cardElevation="@dimen/_5sdp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/color_next"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="@string/next"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>




        </RelativeLayout>

    </ScrollView>
</layout>