<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/back"
                android:padding="@dimen/_5sdp"
                android:layout_margin="@dimen/_15sdp"/>


            <TextView
                android:id="@+id/tvMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_16sdp"
                android:text="@string/choose_your_gender" />


            <TextView
                android:id="@+id/tv2"
                android:layout_below="@+id/tvMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/text_for_gender"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />



            <LinearLayout

                android:layout_below="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_30sdp"
                android:orientation="vertical">



             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_100sdp"
                 android:orientation="horizontal"
                 android:weightSum="1">

                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
                     android:gravity="center"
                     android:orientation="vertical">

                     <ImageView
                         android:layout_width="@dimen/_40sdp"
                         android:layout_height="@dimen/_40sdp"
                         android:layout_gravity="center"
                         android:src="@drawable/male"/>

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/male"
                         android:fontFamily="@font/poppins_regular"
                         android:textSize="@dimen/_12sdp"
                         android:textColor="@color/black"
                         android:layout_margin="@dimen/_8sdp"/>


                 </LinearLayout>

                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
                     android:gravity="center"
                     android:orientation="vertical">

                     <ImageView
                         android:layout_width="@dimen/_40sdp"
                         android:layout_height="@dimen/_40sdp"
                         android:layout_gravity="center"
                         android:src="@drawable/female"/>

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/female"
                         android:fontFamily="@font/poppins_regular"
                         android:textSize="@dimen/_12sdp"
                         android:textColor="@color/black"
                         android:layout_margin="@dimen/_8sdp"/>


                 </LinearLayout>

             </LinearLayout>






                <androidx.cardview.widget.CardView
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_30sdp"
                    app:cardElevation="@dimen/_5sdp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:background="@color/color_next"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="@string/next"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>




        </RelativeLayout>

    </ScrollView>
</layout>