<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_gray_bg">


        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/cross_back"
            android:padding="@dimen/_5sdp"
            android:layout_margin="@dimen/_25sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_12sdp"
                android:text="@string/otp_verify_one" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <in.aabhasjindal.otptextview.OtpTextView
                        android:layout_below="@+id/tvDes"
                        android:id="@+id/Otp"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:textColor="@color/black"
                        app:height="30dp"
                        app:width="30dp"
                        app:bar_enabled="true"
                        app:bar_height="2dp"
                        android:layout_gravity="center"
                        app:length="6"
                        app:otp_text_size="24dp"
                        app:bar_active_color="@color/black"
                        app:bar_success_color="@color/white"
                        android:layout_marginLeft="35dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginRight="35dp"
                        android:layout_marginBottom="@dimen/_20sdp"/>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnSubmit"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        app:cardCornerRadius="@dimen/_30sdp"
                        app:cardElevation="@dimen/_5sdp">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:background="@color/color_next"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center"
                            android:text="@string/submit"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_13sdp" />

                    </androidx.cardview.widget.CardView>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_20sdp"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_12sdp"
                android:text="@string/do_not_receive_code" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/btnResend"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/resend" />


                <TextView
                    android:id="@+id/btnCall"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/_12sdp"
                    android:text="@string/get_call" />


            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>
</layout>